[package]
name = "due-process-scoreboard"
version = "0.1.0"
authors = ["Laura Demkowicz-Duffy <edward70891@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced = "0.3"
regex = "1.4.5"
lazy_static = "1.4.0"
prettytable-rs = "^0.8"
# logos = "0.12.0"